--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "redis": "^4.0.1",
