--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.4.5",
+    "@grpc/proto-loader": "^0.6.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "redis": "^4.0.1",
